--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
 		"start": "node server.js"
 	},
 	"dependencies": {
+		"bcrypt": "^5.1.0",
 		"body-parser": "^1.15.2",
 		"chai": "^4.2.0",
-		"chai-http": "^3.0.0",
+		"chai-http": "^5.1.2",
 		"cors": "^2.8.1",
 		"dotenv": "^8.2.0",
 		"express": "^4.14.0",
 		"helmet": "^3.1.0",
-		"mocha": "^3.2.0",
+		"mocha": "^11.7.4",
 		"mongoose": "^8.4.5"
 	},
 	"repository": {
